--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Descripción del usuario</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-list>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+        <!-- Multi-line sliding item with icon options on both sides -->
+        <ion-item-sliding id="item100">
+            <ion-item href="#">
+                <ion-label>
+                    <h2>Nombre: {{user.name}}</h2>
+                    <p>Email: {{user.email}}</p>
+                    <p>Compañia: {{company.name}} {{company.bs}}</p>
+                    <p>dirección: {{address.street}} {{address.suite}} {{address.city}} {{address.zipcode}}</p>
+                    <!-- <p>{{}}</p>
+                  <p>{{}}</p> -->
+                </ion-label>
+                <ion-note slot="end">
+                    10:45 AM
+                </ion-note>
+            </ion-item>
+        </ion-item-sliding>
+    </ion-list>
 </ion-content>
